# StecaChargerPy

./: .gitignore  LICENSE  README.md  pyproject.toml
StecaChargerPy/: __init__.py  authentication.py  client.py  errors.py  spec.py
examples/: example.py  simple_example.py
tests/: test_authentication.py  test_client.py  test_spec.py
